--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -1,3 +1,99 @@
-// Place all the styles related to the Quotes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+$red: #ff1900;
+$yellow: #FFBC2F;
+$orange: #F96C06;
+$dark: #222222;
+$gray: #c0c0c0;
+$lt-gray: #F0F0F0;
+
+body {
+	color: $dark;
+	background-color: $lt-gray;
+	font-family: 'Raleway', sans-serif;
+}
+.quoteBox {
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
+aside {
+	width: 30%;
+	height: 100vh;
+	float: left;
+	background-color: $dark;
+
+	h1 {
+		color: $orange;
+		font-weight: bold;
+		padding: 0px 15px 3px;
+		border-bottom: 1px solid $orange;
+	}
+	 h5 {
+		color: $orange;
+		padding: 0px 15px;
+		margin-top: 0px;
+	}
+	.quoteForm {
+		padding: 30px 20px;
+		text-align: center;
+		input[type="text"] {
+			width: 90%;
+			padding: 0px 5px 1px;
+			background-color: transparent;
+			border: none;
+			border-bottom: 2px dotted $orange;
+			color: $orange;
+			font-size: 2rem;
+			margin-bottom: 10px;
+			overflow: auto;
+		}
+		input[type="submit"] {
+			background-color: $orange;
+			color: $lt-gray;
+			width: 200px;
+			height: 40px;
+			margin: 20px auto;
+			font-size: 2rem;
+			border: none;
+		  -webkit-appearance: none;
+		  -moz-appearance: none;
+		  appearance: none;
+			&:after {
+				content: '>>';
+			}
+		}
+	}
+}
+.quoteList {
+	overflow: hidden;
+}
+.quote {
+	position: relative;
+	float: left;
+	width: 30%;
+	padding: 15px;
+	margin: 10px;
+	border: 2px solid $orange;
+	background-color: #ffffff;
+	outline: 4px solid #ffffff;
+	font-size: 2rem;
+	&:before {
+			content: "“";
+			position: absolute;
+			left: 0px;
+			top: 10px;
+			width: 15px;
+			height: 100%;
+			font-size: 10rem;
+			color: $lt-gray;
+			font-family: 'Century Gothic';
+		}
+	.quoteTxt {
+		margin-top: 0px;
+		font-size: 1.5rem;
+		color: $gray;
+	}
+	p {
+		padding-left: 30px;
+
+	}
+}
