--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -10,15 +10,23 @@ body {
 	background-color: $lt-gray;
 	font-family: 'Raleway', sans-serif;
 }
-.quoteBox {
+.content{
 	width: 100%;
 	height: 100vh;
+	padding: 0px;
+	height: 0px;
+	overflow: hidden;
+}
+.quoteBox {
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 aside {
 	width: 30%;
 	height: 100vh;
 	float: left;
+	margin: 0px;
 	background-color: $dark;
 
 	h1 {
@@ -63,15 +71,24 @@ aside {
 		}
 	}
 }
+main {
+	width: 70%;
+	height: 100vh;
+	float: left;
+	margin: 0px;
+	overflow-y: scroll;
+}
 .quoteList {
-	overflow: hidden;
+	width: 100%;
+	margin: 0px;
+	padding-left: 1%;
 }
 .quote {
 	position: relative;
 	float: left;
-	width: 30%;
+	width: 31%;
 	padding: 15px;
-	margin: 10px;
+	margin: 10px 1%;
 	border: 2px solid $orange;
 	background-color: #ffffff;
 	outline: 4px solid #ffffff;
