--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>UsefulQuotes</title>
-  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Raleway:700,400' %>
+  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Raleway:700,400' %>
   <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
