--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -40,6 +40,11 @@ aside {
 		padding: 0px 15px;
 		margin-top: 0px;
 	}
+	h4 {
+		color: $gray;
+		text-align: left;
+		padding-left: 20px;
+	}
 	.quoteForm {
 		padding: 30px 20px;
 		text-align: center;
